# devops-challenge-02

./: .gitignore  429.html  README.md  docker-compose.yml  nginx.conf
service-1/: Dockerfile  pyproject.toml
service-1/app/: main.py
service-2/: Dockerfile  index.js  package-lock.json  package.json
service-3/: Dockerfile  go.mod  main.go
